--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,10 +1,10 @@
 # SMTP Configuration
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.username=subedirohit49@gmail.com
-mail.smtp.password=rvgw bjra xcym fona
+mail.smtp.username=
+mail.smtp.password=
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.from=HRMS System <subedirohit49@gmail.com>
+mail.from=HRMS System <>
 mail.reply-to=no-reply@hrms.com
 mail.enabled=false
