--- a/src/main/resources/db.properties.template
+++ b/src/main/resources/db.properties.template
@@ -1,16 +1,16 @@
 # Database Configuration
 db.url=jdbc:postgresql://localhost:5432/
 db.name=hrms_db
-db.user=postgres
-db.password=Belbari890
+db.user=your_db_username
+db.password=your_db_password
 
 # Email Configuration
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.username=
-mail.password=
-mail.from=HRMS System <>
+mail.username=your_email@gmail.com
+mail.password=your_app_password
+mail.from=HRMS System <your_email@gmail.com>
 mail.reply-to=no-reply@hrms.com
 mail.enabled=false
